--- a/day1.ipynb
+++ b/day1.ipynb
@@ -28,7 +28,7 @@
         "trusted": true
       },
       "outputs": [],
-      "execution_count": 25
+      "execution_count": 6
     },
     {
       "cell_type": "code",
@@ -37,7 +37,31 @@
         "trusted": true
       },
       "outputs": [],
-      "execution_count": 57
+      "execution_count": 7
+    },
+    {
+      "cell_type": "code",
+      "source": "print(f'sum of calibration values : {sum_calibration_values}')",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "sum of calibration values : 54676\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 8
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
     }
   ]
 }
